// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel injectGlobal extract injectGlobal assign to variable 1`] = `
"
const thisWillBeUndefined = injectGlobal([], [], function createEmotionStyledRules() {
  return [{
    \\"body\\": {
      \\"margin\\": \\"0\\",
      \\"padding\\": \\"0\\"
    },
    \\"body > div\\": {
      \\"display\\": \\"none\\"
    },
    \\"html\\": {
      \\"background\\": \\"green\\"
    }
  }];
});"
`;

exports[`babel injectGlobal extract injectGlobal assign to variable 2`] = `
"body {
            margin: 0;
            padding: 0;
          }
body > div {
            display: none;
}
html {
            background: green;
          }"
`;

exports[`babel injectGlobal extract injectGlobal basic 1`] = `
"
injectGlobal([], [], function createEmotionStyledRules() {
  return [{
    \\"body\\": {
      \\"margin\\": \\"0\\",
      \\"padding\\": \\"0\\"
    },
    \\"body > div\\": {
      \\"display\\": \\"none\\"
    },
    \\"html\\": {
      \\"background\\": \\"green\\"
    }
  }];
});"
`;

exports[`babel injectGlobal extract injectGlobal basic 2`] = `
"body {
            margin: 0;
            padding: 0;
          }
body > div {
            display: none;
}
html {
            background: green;
          }"
`;

exports[`babel injectGlobal extract injectGlobal with interpolation 1`] = `
"
injectGlobal([], [display], function createEmotionStyledRules(x0) {
  return [{
    \\"body\\": {
      \\"margin\\": \\"0\\",
      \\"padding\\": \\"0\\",
      \\"display\\": x0
    },
    \\"body > div\\": {
      \\"display\\": \\"none\\"
    },
    \\"html\\": {
      \\"background\\": \\"green\\"
    }
  }];
});"
`;

exports[`babel injectGlobal inline injectGlobal basic 1`] = `
"
injectGlobal([], [], function createEmotionStyledRules() {
  return [{
    \\"body\\": {
      \\"margin\\": \\"0\\",
      \\"padding\\": \\"0\\"
    },
    \\"body > div\\": {
      \\"display\\": \\"none\\"
    },
    \\"html\\": {
      \\"background\\": \\"green\\"
    }
  }];
});"
`;

exports[`babel injectGlobal inline injectGlobal with interpolation 1`] = `
"
injectGlobal([], [display], function createEmotionStyledRules(x0) {
  return [{
    \\"body\\": {
      \\"margin\\": \\"0\\",
      \\"padding\\": \\"0\\",
      \\"display\\": x0
    },
    \\"body > div\\": {
      \\"display\\": \\"none\\"
    },
    \\"html\\": {
      \\"background\\": \\"green\\"
    }
  }];
});"
`;
